// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LikeC4ModelBuilder > builds model with description and technology 1`] = `
{
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "client": {
      "description": null,
      "id": "client",
      "kind": "user",
      "links": null,
      "shape": "person",
      "style": {
        "opacity": 40,
      },
      "tags": null,
      "technology": null,
      "title": "client",
    },
    "system": {
      "description": null,
      "id": "system",
      "kind": "component",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "system",
    },
    "system.backend": {
      "color": "secondary",
      "description": null,
      "id": "system.backend",
      "kind": "component",
      "links": null,
      "style": {
        "border": "dashed",
      },
      "tags": null,
      "technology": "NodeJS",
      "title": "Backend",
    },
    "system.frontend": {
      "color": "muted",
      "description": "Frontend description",
      "id": "system.frontend",
      "kind": "component",
      "links": null,
      "shape": "browser",
      "style": {},
      "tags": null,
      "technology": null,
      "title": "frontend",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "relations": {
    "90t726": {
      "id": "90t726",
      "source": "system.frontend",
      "target": "system.backend",
      "title": "requests",
    },
    "vcxqbt": {
      "id": "vcxqbt",
      "source": "client",
      "target": "system.frontend",
      "title": "",
    },
  },
  "specification": {
    "deployments": {},
    "elements": {
      "component": {
        "style": {},
      },
      "user": {
        "style": {
          "opacity": 40,
          "shape": "person",
        },
      },
    },
    "relationships": {},
    "tags": [],
  },
  "views": {
    "index": {
      "__": "element",
      "autoLayout": {
        "direction": "TB",
      },
      "customColorDefinitions": {},
      "description": null,
      "edges": [
        {
          "id": "client:system",
          "label": null,
          "parent": null,
          "relations": [
            "vcxqbt",
          ],
          "source": "client",
          "target": "system",
        },
      ],
      "hash": "7a60f77938fde3ce37eee7a81e6d8601379ccff4",
      "id": "index",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "client",
          "inEdges": [],
          "kind": "user",
          "level": 0,
          "links": null,
          "modelRef": 1,
          "outEdges": [
            "client:system",
          ],
          "parent": null,
          "shape": "person",
          "style": {
            "opacity": 40,
          },
          "tags": null,
          "technology": null,
          "title": "client",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system",
          "inEdges": [
            "client:system",
          ],
          "kind": "component",
          "level": 0,
          "links": null,
          "modelRef": 1,
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "system",
        },
      ],
      "tags": null,
      "title": "Landscape view",
    },
  },
}
`;

exports[`LikeC4ModelBuilder > builds model with extend 1`] = `
{
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "client": {
      "description": null,
      "id": "client",
      "kind": "user",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "client",
    },
    "system": {
      "description": null,
      "id": "system",
      "kind": "component",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "system",
    },
    "system.backend": {
      "description": null,
      "id": "system.backend",
      "kind": "component",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "backend",
    },
    "system.backend.api": {
      "description": null,
      "id": "system.backend.api",
      "kind": "component",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "api",
    },
    "system.frontend": {
      "description": null,
      "id": "system.frontend",
      "kind": "component",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "frontend",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "relations": {
    "14imtre": {
      "id": "14imtre",
      "source": "client",
      "target": "system.frontend",
      "title": "opens",
    },
    "fubnyh": {
      "id": "fubnyh",
      "source": "system.frontend",
      "target": "system.backend.api",
      "title": "requests",
    },
  },
  "specification": {
    "deployments": {},
    "elements": {
      "component": {
        "style": {},
      },
      "user": {
        "style": {},
      },
    },
    "relationships": {},
    "tags": [
      "deprecated",
    ],
  },
  "views": {
    "frontend": {
      "__": "element",
      "autoLayout": {
        "direction": "TB",
      },
      "customColorDefinitions": {},
      "description": null,
      "edges": [
        {
          "id": "client:system.frontend",
          "label": "opens",
          "parent": null,
          "relations": [
            "14imtre",
          ],
          "source": "client",
          "target": "system.frontend",
        },
        {
          "id": "system.frontend:system.backend",
          "label": "requests",
          "parent": null,
          "relations": [
            "fubnyh",
          ],
          "source": "system.frontend",
          "target": "system.backend",
        },
      ],
      "hash": "6133897cf17d30559ee717c08c2226aa7fa629da",
      "id": "frontend",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "client",
          "inEdges": [],
          "kind": "user",
          "level": 0,
          "links": null,
          "modelRef": 1,
          "outEdges": [
            "client:system.frontend",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "client",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system.frontend",
          "inEdges": [
            "client:system.frontend",
          ],
          "kind": "component",
          "level": 0,
          "links": null,
          "modelRef": 1,
          "outEdges": [
            "system.frontend:system.backend",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "frontend",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system.backend",
          "inEdges": [
            "system.frontend:system.backend",
          ],
          "kind": "component",
          "level": 0,
          "links": null,
          "modelRef": 1,
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "backend",
        },
      ],
      "relativePath": "2.c4",
      "tags": null,
      "title": "frontend",
      "viewOf": "system.frontend",
    },
    "index": {
      "__": "element",
      "autoLayout": {
        "direction": "TB",
      },
      "customColorDefinitions": {},
      "description": null,
      "edges": [
        {
          "id": "client:system",
          "label": "opens",
          "parent": null,
          "relations": [
            "14imtre",
          ],
          "source": "client",
          "target": "system",
        },
      ],
      "hash": "dad995a71feeb1fb61f6704bbb35d53951ddc278",
      "id": "index",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "client",
          "inEdges": [],
          "kind": "user",
          "level": 0,
          "links": null,
          "modelRef": 1,
          "outEdges": [
            "client:system",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "client",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system",
          "inEdges": [
            "client:system",
          ],
          "kind": "component",
          "level": 0,
          "links": null,
          "modelRef": 1,
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "system",
        },
      ],
      "relativePath": "2.c4",
      "tags": null,
      "title": "Index",
    },
    "v1": {
      "__": "element",
      "autoLayout": {
        "direction": "LR",
      },
      "customColorDefinitions": {},
      "description": null,
      "edges": [
        {
          "id": "system.frontend:system.backend.api",
          "label": "requests",
          "parent": null,
          "relations": [
            "fubnyh",
          ],
          "source": "system.frontend",
          "target": "system.backend.api",
        },
      ],
      "hash": "39d3d26d1dcddbfbe839ea31ad45163946543741",
      "id": "v1",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system.frontend",
          "inEdges": [],
          "kind": "component",
          "level": 0,
          "links": null,
          "modelRef": 1,
          "navigateTo": "frontend",
          "outEdges": [
            "system.frontend:system.backend.api",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "frontend",
        },
        {
          "children": [
            "system.backend.api",
          ],
          "color": "primary",
          "depth": 1,
          "description": null,
          "id": "system.backend",
          "inEdges": [
            "system.frontend:system.backend.api",
          ],
          "kind": "component",
          "level": 0,
          "links": null,
          "modelRef": 1,
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "backend",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system.backend.api",
          "inEdges": [
            "system.frontend:system.backend.api",
          ],
          "kind": "component",
          "level": 1,
          "links": null,
          "modelRef": 1,
          "outEdges": [],
          "parent": "system.backend",
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "api",
        },
      ],
      "relativePath": "2.c4",
      "tags": null,
      "title": "api",
      "viewOf": "system.backend.api",
    },
  },
}
`;

exports[`LikeC4ModelBuilder > builds model with relationship spec and tag 1`] = `
{
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "user1": {
      "description": null,
      "id": "user1",
      "kind": "person",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "user1",
    },
    "user2": {
      "description": null,
      "id": "user2",
      "kind": "person",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "user2",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "relations": {
    "1qlbaph": {
      "id": "1qlbaph",
      "kind": "async",
      "source": "user1",
      "tags": [
        "next",
      ],
      "target": "user2",
      "title": "",
    },
  },
  "specification": {
    "deployments": {},
    "elements": {
      "person": {
        "style": {},
      },
    },
    "relationships": {
      "async": {},
    },
    "tags": [
      "next",
    ],
  },
  "views": {
    "index": {
      "__": "element",
      "autoLayout": {
        "direction": "TB",
      },
      "customColorDefinitions": {},
      "description": null,
      "edges": [
        {
          "id": "user1:user2",
          "kind": "async",
          "label": null,
          "parent": null,
          "relations": [
            "1qlbaph",
          ],
          "source": "user1",
          "tags": [
            "next",
          ],
          "target": "user2",
        },
      ],
      "hash": "f35bcd834a8aabbcd5ded7aae4735b2b16901742",
      "id": "index",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "user1",
          "inEdges": [],
          "kind": "person",
          "level": 0,
          "links": null,
          "modelRef": 1,
          "outEdges": [
            "user1:user2",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "user1",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "user2",
          "inEdges": [
            "user1:user2",
          ],
          "kind": "person",
          "level": 0,
          "links": null,
          "modelRef": 1,
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "user2",
        },
      ],
      "tags": null,
      "title": "Landscape view",
    },
  },
}
`;

exports[`LikeC4ModelBuilder > builds model with relationship spec with technology 1`] = `
{
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "user1": {
      "description": null,
      "id": "user1",
      "kind": "person",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "user1",
    },
    "user2": {
      "description": null,
      "id": "user2",
      "kind": "person",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "user2",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "relations": {
    "1qlbaph": {
      "id": "1qlbaph",
      "kind": "async",
      "source": "user1",
      "target": "user2",
      "technology": "Async",
      "title": "",
    },
  },
  "specification": {
    "deployments": {},
    "elements": {
      "person": {
        "style": {},
      },
    },
    "relationships": {
      "async": {
        "technology": "Async",
      },
    },
    "tags": [],
  },
  "views": {
    "index": {
      "__": "element",
      "autoLayout": {
        "direction": "TB",
      },
      "customColorDefinitions": {},
      "description": null,
      "edges": [
        {
          "id": "user1:user2",
          "kind": "async",
          "label": "[Async]",
          "parent": null,
          "relations": [
            "1qlbaph",
          ],
          "source": "user1",
          "target": "user2",
          "technology": "Async",
        },
      ],
      "hash": "174b9cf8311224d705f83fcbf6373a25b135a742",
      "id": "index",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "user1",
          "inEdges": [],
          "kind": "person",
          "level": 0,
          "links": null,
          "modelRef": 1,
          "outEdges": [
            "user1:user2",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "user1",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "user2",
          "inEdges": [
            "user1:user2",
          ],
          "kind": "person",
          "level": 0,
          "links": null,
          "modelRef": 1,
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "user2",
        },
      ],
      "tags": null,
      "title": "Landscape view",
    },
  },
}
`;

exports[`LikeC4ModelBuilder > builds model with styled relationship 1`] = `
{
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "user1": {
      "description": null,
      "id": "user1",
      "kind": "person",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "user1",
    },
    "user2": {
      "description": null,
      "id": "user2",
      "kind": "person",
      "links": null,
      "style": {},
      "tags": null,
      "technology": null,
      "title": "user2",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "relations": {
    "1qlbaph": {
      "color": "red",
      "head": "diamond",
      "id": "1qlbaph",
      "line": "dotted",
      "source": "user1",
      "tail": "none",
      "target": "user2",
      "title": "",
    },
  },
  "specification": {
    "deployments": {},
    "elements": {
      "person": {
        "style": {},
      },
    },
    "relationships": {},
    "tags": [],
  },
  "views": {
    "index": {
      "__": "element",
      "autoLayout": {
        "direction": "TB",
      },
      "customColorDefinitions": {},
      "description": null,
      "edges": [
        {
          "color": "red",
          "head": "diamond",
          "id": "user1:user2",
          "label": null,
          "line": "dotted",
          "parent": null,
          "relations": [
            "1qlbaph",
          ],
          "source": "user1",
          "tail": "none",
          "target": "user2",
        },
      ],
      "hash": "eaa45c2703d406ed239c59bb1985720d44010491",
      "id": "index",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "user1",
          "inEdges": [],
          "kind": "person",
          "level": 0,
          "links": null,
          "modelRef": 1,
          "outEdges": [
            "user1:user2",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "user1",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "user2",
          "inEdges": [
            "user1:user2",
          ],
          "kind": "person",
          "level": 0,
          "links": null,
          "modelRef": 1,
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": null,
          "technology": null,
          "title": "user2",
        },
      ],
      "tags": null,
      "title": "Landscape view",
    },
  },
}
`;
